kubernetes/talos-flux/apps/cloud/nextcloud/app/patch-service-push.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: cloud
  labels:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: nextcloud
    helm.toolkit.fluxcd.io/name: nextcloud
    helm.toolkit.fluxcd.io/namespace: cloud
spec:
  selector:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 8080
      targetPort: 80
    - name: push
      port: 7867
      targetPort: 7867
    - name: push-metrics
      port: 9206
      targetPort: 9206
  type: ClusterIP
