kubernetes/talos-flux/apps/cloud/nextcloud/app/svc-nextcloud-alt.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nextcloud
  name: nextcloud
  namespace: cloud
spec:
  internalTrafficPolicy: Cluster
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http-alt
      port: 9001
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: nextcloud
  sessionAffinity: None
  type: ClusterIP
