kubernetes/talos-flux/apps/cloud/nextcloud/app/ingress-nextcloud-push.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-push
  annotations:
    kubernetes.io/ingress.class: cilium
    cert-manager.io/cluster-issuer: letsencrypt-production
    ingress.cilium.io/force-https: enabled
    kubernetes.io/tls-acme: "true"

spec:
  rules:
    - host: cloud.${SECRET_DOMAIN}
      http:
        paths:
          - path: /apps/push
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  name: push
  tls:
    - hosts:
        - cloud.${SECRET_DOMAIN}
      secretName: cloud.${SECRET_DOMAIN}-tls
